RESOLVED FIXED132410
If there are no services available, do not show the service controls UI
https://bugs.webkit.org/show_bug.cgi?id=132410
Summary If there are no services available, do not show the service controls UI
Brady Eidson
Reported 2014-04-30 16:54:41 PDT
If there are no services available, do not show the service controls UI <rdar://problem/16735665>
Attachments
Patch v1 (24.53 KB, patch)
2014-04-30 17:07 PDT, Brady Eidson
thorton: review+
Patch v2 - Rebased (24.49 KB, patch)
2014-04-30 17:13 PDT, Brady Eidson
no flags
Patch v3 - For landing (24.38 KB, patch)
2014-04-30 17:23 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2014-04-30 17:07:16 PDT
Created attachment 230540 [details] Patch v1
Tim Horton
Comment 2 2014-04-30 17:12:12 PDT
Comment on attachment 230540 [details] Patch v1 View in context: https://bugs.webkit.org/attachment.cgi?id=230540&action=review > Source/WebKit2/Shared/WebProcessCreationParameters.cpp:52 > + , imageServicesExist(false) hasImageServices, etc?
Brady Eidson
Comment 3 2014-04-30 17:13:49 PDT
Created attachment 230541 [details] Patch v2 - Rebased
Brady Eidson
Comment 4 2014-04-30 17:14:19 PDT
Will make that change
Brady Eidson
Comment 5 2014-04-30 17:23:37 PDT
Created attachment 230544 [details] Patch v3 - For landing
WebKit Commit Bot
Comment 6 2014-04-30 18:19:24 PDT
Comment on attachment 230544 [details] Patch v3 - For landing Clearing flags on attachment: 230544 Committed r168074: <http://trac.webkit.org/changeset/168074>
WebKit Commit Bot
Comment 7 2014-04-30 18:19:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.